Fixing Errors
