# middleware/validate.js
@@ -1,5 +1,26 @@
 const validator = require('../helpers/validate');
 
+const saveBooks = (req, res, next) => {
+  const validationRules = {
+    genre: 'required|string',
+    title: 'required|string',
+    author: 'required|string',
+    code: 'required|regex:/^[0-9]{3}-[0-9]{3}$/'
+  };
+   validator(req.body, validationRules, {}, (err, status) => {
+    if (!status) {
+      return res.status(412).json({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    }
+    
+    next();
+  });
+};
+
+
 const saveConnection = (req, res, next) => {
   const validationRule = {
     firstName: 'required|string',
@@ -24,4 +45,4 @@ const saveConnection = (req, res, next) => {
   });
 };
 
-module.exports = { saveConnection };
+module.exports = { saveConnection, saveBooks };
